; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/unix/remote/extr_19101.c_xdr_tt_reply.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/unix/remote/extr_19101.c_xdr_tt_reply.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tt_reply = type { i32, i32 }

@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xdr_tt_reply(i32* %0, %struct.tt_reply* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca %struct.tt_reply*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.tt_reply* %1, %struct.tt_reply** %5, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = load %struct.tt_reply*, %struct.tt_reply** %5, align 8
  %8 = getelementptr inbounds %struct.tt_reply, %struct.tt_reply* %7, i32 0, i32 1
  %9 = call i32 @xdr_int(i32* %6, i32* %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %13, label %11

11:                                               ; preds = %2
  %12 = load i32, i32* @FALSE, align 4
  store i32 %12, i32* %3, align 4
  br label %23

13:                                               ; preds = %2
  %14 = load i32*, i32** %4, align 8
  %15 = load %struct.tt_reply*, %struct.tt_reply** %5, align 8
  %16 = getelementptr inbounds %struct.tt_reply, %struct.tt_reply* %15, i32 0, i32 0
  %17 = call i32 @xdr_int(i32* %14, i32* %16)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %21, label %19

19:                                               ; preds = %13
  %20 = load i32, i32* @FALSE, align 4
  store i32 %20, i32* %3, align 4
  br label %23

21:                                               ; preds = %13
  %22 = load i32, i32* @TRUE, align 4
  store i32 %22, i32* %3, align 4
  br label %23

23:                                               ; preds = %21, %19, %11
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i32 @xdr_int(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
